--- a/playground/css/styles.css
+++ b/playground/css/styles.css
@@ -39,6 +39,33 @@ font-size:24px;
 box-shadow:0px 0px 2px rgba(0,0,0,0.5);
 }
 
+.course
+{
+width:auto;
+padding:5px;
+display:inline-table;
+background-color:rgba(0,0,0,0.2);
+border:thin solid rgba(255,255,255,0.6);
+font-family:"Raleway",sans-serif;
+font-size:24px;	
+box-shadow:0px 0px 2px rgba(0,0,0,0.5);
+cursor:pointer;
+}
+#body-content h1
+{
+	font-family: 'Raleway', sans-serif;
+	font-weight:lighter;
+		color:	rgba(0,0,0,0.7);
+	text-shadow:0px 0px 1px #000;
+}
+
+ #body-content h2
+{
+	font-family: 'Raleway', sans-serif;
+	font-weight:lighter;
+	color:	rgba(0,0,0,0.7);
+	text-shadow:0px 0px 1px #000;
+}
 #header h1
 {
 	font-family: 'Raleway', sans-serif;
