--- a/playground/css/styles.css
+++ b/playground/css/styles.css
@@ -72,7 +72,7 @@ cursor:pointer;
 	font-weight:200;
 }
 #header-container {
-	background-color: rgba(10,10,10,0.75);
+	background-color: green;
 	box-shadow:1px 1px 5px rgba(0,0,0,0.6);
 	z-index:3;
 }
