--- a/playground/css/styles.css
+++ b/playground/css/styles.css
@@ -50,6 +50,7 @@ font-family:"Raleway",sans-serif;
 font-size:24px;	
 box-shadow:0px 0px 2px rgba(0,0,0,0.5);
 cursor:pointer;
+margin:5px;
 }
 #body-content h1
 {
