--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* DO NOT CHANGE ANYTHING HERE !!! */
 @import url(//fonts.googleapis.com/css?family=Telex);
 row2
 {
@@ -3655,7 +3654,7 @@ input[type="submit"].btn.btn-mini {
   margin-left: -20px;
   font-size: 20px;
   font-weight: 200;
-  color: #ffffff;
+  color: white;
   text-shadow: 0 1px 0 #54b4eb;
 }
 .navbar .brand:hover {
